Update: Fixed upload folder not showing

--- a/bias_checker/static/bias_checker/style.css
+++ b/bias_checker/static/bias_checker/style.css
@@ -155,6 +155,14 @@ div[contenteditable=true] {
     cursor: pointer;
 }
 
+.success-div{
+    margin-top: 10px;
+    /* background-color: #abf7b1; */
+    background-color: #fff394;
+    max-width: max-content;
+    padding: 10px;
+    border-radius: 5px;
+}
 
 
 
